sonar build